<resources>
    <string name="app_name">یادنگاشت</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_email">ایمیل خود را وارد کنید</string>
    <string name="type_your_pass">رمز خود را وارد کنید</string>
    <string name="retype_your_pass">رمز خود را تکرار کنید</string>
    <string name="sign_in">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="add_your_note">یادداشت خود را اضافه کنید</string>
    <string name="default_web_client_id">YOUR_CLIENT_ID_HERE</string>


    <string name="image">image</string>
    <string name="bersyte">bersyte</string>
</resources>